--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore: ^0.13.2+1
-
+  datetime_picker_formfield: ^1.0.0
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
