--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore: ^0.13.2+1
+  firebase_auth: ^0.15.5+2
+  google_sign_in: ^4.1.4
   datetime_picker_formfield: ^1.0.0
   intl: ^0.16.1
 
