Improved auth and added editing, along with other bugfizes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: eatme
 description: Preventing food waste.
 
-version: 1.1.0+1
+version: 1.2.0+1
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -23,6 +23,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icon_big.png
 
 flutter_icons:
   ios: true
